@@ -238,6 +238,8 @@
 - default and popup templates now add to #p4a_body a new CSS class containing the browser platform (windows, linux etc...)
 - P4A_Error was removed because outdated, it will be replaced by exception objects
 - README was updated
+- P4A_Tab_Pane::getActivePageName() method was refactored, if empty returns the first page name
+- P4A_Tab_Pane::getAsString() method now calls getActivePageName() to avoid the possibility to render a tab pane without any active page
 
 2.2.4
 - rules to generate P4A_THEME_DIR and P4A_ICONS_DIR were changed
